DataGrid: Fix unnecessary scrollbars if the columnAutoWidth and hidingPriority options are set (T745930)

--- a/styles/widgets/material/gridBase.material.less
+++ b/styles/widgets/material/gridBase.material.less
@@ -270,11 +270,6 @@
                 font-size: @MATERIAL_GRID_BASE_CELL_FONT_SIZE;
                 line-height: @MATERIAL_GRID_BASE_CELL_LINE_HEIGHT;
             }
-
-            & > td.dx-command-adaptive {
-                padding-top: @MATERIAL_GRID_BASE_CELL_VERTICAL_PADDING - 2px;
-                padding-bottom: @MATERIAL_GRID_BASE_CELL_VERTICAL_PADDING - 2px;
-            }
         }
 
         .dx-@{widgetName}-content .dx-@{widgetName}-table .dx-row {
